# reprieve

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindLibYAMLDOM.cmake
src/: common_defs.h  config.c  config.h  data.c  data.h  main.c  xsel.c  xsel.h
src/io/: io_common.c  io_common.h  io_config.c  io_config.h  io_data.c  io_data.h  io_setup.c  io_setup.h
src/oath/: totp.c  totp.h
